<resources>
    <string name="app_name">MyTasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mytasks">MyTasks</string>
    <string name="hello">Hello there,\nWelcome\nOnBoard!</string>
    <string name="start">Start</string>
    <string name="tasks">Tasks</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="other_days">Other Days</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="add_new">ADD new</string>
    <string name="enter_task">Enter Task</string>
    <string name="add_task">Add Task</string>
    <string name="select_date">Select Date</string>
    <string name="tomorrow_lower">Tomorrow</string>
    <string name="today_lower">Today</string>
    <string name="when">WHEN</string>
    <string name="task_added_successfully">Task added successfully!</string>
    <string name="my_tasks_app">MY TASKS APP</string>
    <string name="dashboard">Dashboard</string>
    <string name="calender">Calender</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate US</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="our_works">Our Works</string>
    <string name="mar_2020">MAR 2020</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="pending">PENDING</string>
    <string name="completed">COMPLETED</string>
    <string name="current_day">Today - </string>
    <string name="_5">5</string>
    <string name="today_you_have">Today you have: </string>
    <string name="tomorrow_you_have">Tomorrow you have: </string>
    <string name="on_this_date">On this date you have: </string>
    <string name="empty_list">Click plus button to add a task</string>
    <string name="write_your_task">write your task</string>
    <string name="your_task">Your task</string>
    <string name="delete_all_tomorrow_tasks">Delete all tomorrow tasks</string>
    <string name="delete_all_today_tasks">Delete all today tasks</string>
    <string name="delete_all_other_tasks">Delete all other tasks</string>
</resources>