<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.destinations.AddTaskFragment"
    android:id="@+id/view">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_new"
        android:textColor="@color/blue"
        android:textSize="@dimen/font_38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="40dp"
            android:hint="@string/enter_task"
            android:textSize="@dimen/font_28" />

        <TextView
            android:id="@+id/tv_when"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/when"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/off_white"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/today_lower"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_tomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tomorrow_lower"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_select_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select_date"
                android:textSize="@dimen/font_18" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/darken_purple"
        android:padding="20dp"
        android:text="@string/add_task"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>