<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.destinations.CalenderFragment">

    <ImageButton
        android:id="@+id/ibtn_back"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:includeFontPadding="false"
        android:text="@string/calender"
        android:textColor="@color/blue"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="@id/ibtn_back"
        app:layout_constraintTop_toBottomOf="@id/ibtn_back" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_current_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_day"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <TextView
        android:id="@+id/tv_number_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/_5"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_current_day"
        app:layout_constraintStart_toEndOf="@+id/tv_current_day"
        app:layout_constraintTop_toTopOf="@+id/tv_current_day" />

    <TextView
        android:id="@+id/tv_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/tasks"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_number_tasks"
        app:layout_constraintStart_toEndOf="@+id/tv_number_tasks"
        app:layout_constraintTop_toTopOf="@+id/tv_number_tasks" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/calendarView"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_day"
        tools:listitem="@layout/task_item" />
</androidx.constraintlayout.widget.ConstraintLayout>