<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.destinations.HomeFragment">

    <ImageButton
        android:id="@+id/ibtn_menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tasks"
        android:textColor="@color/blue"
        android:textSize="@dimen/font_34"
        app:layout_constraintStart_toStartOf="@id/ibtn_menu"
        app:layout_constraintTop_toBottomOf="@id/ibtn_menu" />

    <ImageButton
        android:id="@+id/ibtn_delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_delete_outline_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ibtn_menu"
        app:layout_constraintStart_toStartOf="@id/ibtn_menu"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <TextView
            android:id="@+id/today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:rotation="270"
            android:text="@string/today"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tomorrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/tomorrow"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/other_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/other_days"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_16"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/off_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <View
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:background="@drawable/radius_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="15dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/darken_purple"
        app:fabCustomSize="45dp"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:maxImageSize="15dp" />

    <TextView
        android:id="@+id/tv_no_list_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/your_task"
        android:textColor="@color/black"
        app:layout_constraintVertical_bias="0.4"
        android:textSize="@dimen/font_14"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_container"
        app:layout_constraintEnd_toEndOf="@+id/fragment_container"
        app:layout_constraintStart_toStartOf="@+id/fragment_container"
        app:layout_constraintTop_toTopOf="@+id/fragment_container" />
</androidx.constraintlayout.widget.ConstraintLayout>